@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix JavaScript errors with Internet Explorer 8.
 * [mms] Fix display of mail log icons on the basic message page (Bug #11964).
 * [jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi, Bug #11959).
 * [mms] Workaround broken Message-IDs generated by Outlook when replying to a message (Bug #11953).
@@ -2902,6 +2903,7 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix JavaScript errors with Internet Explorer 8.
 * [mms] Fix display of mail log icons on the basic message page (Bug #11964).
 * [jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi, Bug #11959).
 * [mms] Workaround broken Message-IDs generated by Outlook when replying to a message (Bug #11953).
